[package]
name = "zniff-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
clap = { version = "4.5.48", features = ["derive"] }
quick-xml = {version="0.38.3", features = ["serialize"] }
serde-xml-rs = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.7.3"
tokio = { version = "1.48.0", features = ["full"] }
