# SPDX-FileCopyrightText: Trident IoT, LLC <https://www.tridentiot.com>
# SPDX-License-Identifier: MIT
[package]
name = "zniff-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
hex = "0.4.3"
quick-xml = {version="0.38.3", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_path_to_error = "0.1.20"
serialport = "4.7.3"
thiserror = "2.0.17"
