# SPDX-FileCopyrightText: Trident IoT, LLC <https://www.tridentiot.com>
# SPDX-License-Identifier: MIT
[package]
name = "zniff-rs-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
zniff-rs-core = { path = "../core" }
